--- a/Project.toml
+++ b/Project.toml
@@ -6,3 +6,4 @@ version = "0.1.0"
 [deps]
 PPMD = "d34cf64c-c676-4d9c-b1a4-7b967ea2c402"
 MPI = "da04e1cc-30fd-572f-bb4f-1f8673147195"
+Polynomials = "f27b6e38-b328-58d1-80ce-0feddd5e7a45"
